--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongoose": "^7.4.2",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2"
   }
 }
